build.xml update